swim_common/src/form/tests/derive/incorrect_tag_type.stderr
error: Expected string argument
  --> $DIR/incorrect_tag_type.rs:19:12
   |
19 |     #[form(tag = 13)]
   |            ^^^^^^^^
